# MedicalTracker

./: .gitignore  ARCHITECTURE.md  README.md  config.py  main.py  pyproject.toml
bot/handlers/: __init__.py  edit_and_settings.py  medication.py  schedule.py  simple_stats.py  start.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/middlewares/: __init__.py  error_middleware.py  user_middleware.py
bot/states/: __init__.py  medication_states.py
bot/utils/: __init__.py  validators.py
database/: base.py  init_db.py  models.py  repository.py
scheduler/: notification_scheduler.py
services/: medication_service.py  notification_service.py
